--- a/index.html
+++ b/index.html
@@ -8,33 +8,37 @@
     <title>Document</title>
   </head>
   <body>
-    <form id="login-form" class="hidden">
-      <input
-        type="text"
-        required
-        maxlength="15"
-        placeholder="What is your name?"
-      />
-      <button>Log In</button>
-    </form>
-    <h2 id="clock">00:00:00</h2>
-    <h1 class="hidden" id="greeting"></h1>
-    <div id="quote">
-      <span></span>
-      <span></span>
-    </div>
-    <form action="" id="todo-form">
-      <input
-        type="text"
-        placeholder="Write a To Do and Press Eenter"
-        required
-      />
-    </form>
     <div id="weather">
       <span></span>
       <span></span>
     </div>
-    <ul id="todo-list"></ul>
+    <header>
+      <span id="clock">00:00:00</span>
+      <form id="login-form" class="hidden">
+        <input
+          type="text"
+          required
+          maxlength="15"
+          placeholder="What is your name?"
+        />
+      </form>
+      <span class="hidden" id="greeting"></span>
+    </header>
+    <section>
+      <form action="" id="todo-form">
+        <input
+          type="text"
+          placeholder="Write a To Do and Press Eenter"
+          required
+        />
+      </form>
+      <ul id="todo-list"></ul>
+      <div id="quote">
+        <span></span>
+        <span></span>
+      </div>
+    </section>
+
     <script src="./js/greeting.js"></script>
     <script src="./js/clock.js"></script>
     <script src="./js/quotes.js"></script>
